src/test/deca/codegen/valid/sansObjetPourScript/assign.deca
{
    int a, b;
    float x, y, z;

    a = 1;
    println(a);
    b = a;
    println(b);
    a = 2;
    println(a);
    println(b);
    x = 1.1;
    println(x);
    y = x;
    println(y);
    z = a;
    println(z);
    x = 2.1;
    println(x);
    println(y);
}
