src/test/deca/codegen/invalid/sansObjet/divFloat0.deca
{
    float x = 1.0;
    float y = 0.0;
    float z = x/y;
}
